# silly-small-scheme

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml
src/scheme/: __init__.py  scheme.py
tests/: test_scheme.py
